# brightwheel-interview-email-send

./: .env  Justfile  README.md  pyproject.toml
app/: dependencies.py  exceptions.py  main.py
app/clients/: email_send_client.py  snailgun_client.py  spendgrid_client.py  utils.py
app/models/: email_send_vendor.py  get_email_status_models.py  send_email_models.py  snailgun_models.py  spendgrid_models.py
app/route_helpers/: send_email_helper.py
app/routes/: hello_world.py  send_email.py
app/setup/: settings.py  setup_logging.py
tests/clients/: test_snailgun_client.py  test_spendgrid_client.py  test_utils.py
