[tool.poetry]
name = "brightwheel-interview-email-send"
version = "0.1.0"
description = "Email Send Service"
authors = ["Raj Shah <rajsshah23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.7"
structlog = "^21.1.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
python-dotenv = "0.19.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pydantic = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
